<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.cryptolist.view.CryptoListFragment">

        <EditText
            android:id="@+id/cryptoListSearch"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/search"
            android:textColorHint="@color/light_gray"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/crypto_symbol"
                android:textColor="@color/light_gray"
                android:textSize="14sp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/last_price"
                android:textColor="@color/light_gray"
                android:textSize="14sp"
                android:gravity="end"
                android:layout_weight="1" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/change_1h"
                android:textColor="@color/light_gray"
                android:textSize="14sp"
                android:gravity="end"
                android:layout_weight="1" />

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:text="@string/change_24h"
                android:textColor="@color/light_gray"
                android:textSize="14sp"
                android:gravity="end"
                android:layout_weight="1" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cryptoListRecyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/cryptoListProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cryptoListError"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/light_gray"
            android:textSize="16sp"
            android:gravity="center"
            android:visibility="gone" />
    </LinearLayout>
</layout>